ixgbe: fix possible divide by zero in ixgbe_update_itr (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14689,6 +14689,7 @@
 	patches.drivers/ixgbe-0059-ixgbe-in-shutdown-do-netif_running-under-rtnl_lock.patch
 	patches.drivers/ixgbe-0060-ixgbe-Add-support-for-WoL-on-82599-SFP-LOM.patch
 	patches.drivers/ixgbe-0061-ixgbe-Remove-unnecessary-ifdef-CONFIG_DEBUG_FS-tests.patch
+	patches.drivers/ixgbe-0062-ixgbe-fix-possible-divide-by-zero-in-ixgbe_update_it.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
