ixgbevf: add check for CHECKSUM_PARTIAL when doing TSO (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14912,6 +14912,7 @@
 	patches.drivers/ixgbevf-0043-ixgbevf-merge-ixgbevf_tx_map-and-ixgbevf_tx_queue-in.patch
 	patches.drivers/ixgbevf-0044-ixgbevf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
 	patches.drivers/ixgbevf-0045-ixgbevf-fix-handling-of-tx-checksumming.patch
+	patches.drivers/ixgbevf-0046-ixgbevf-add-check-for-CHECKSUM_PARTIAL-when-doing-TS.patch
 
 	########################################################
 	# Wireless Networking
