ixgbevf: Convert ring storage form pointer to an array to array of pointers (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14900,6 +14900,7 @@
 	patches.drivers/ixgbevf-0031-ixgbevf-add-DCB-configuration-into-queue-setup.patch
 	patches.drivers/ixgbevf-0032-ixgbevf-set-the-disable-state-when-ixgbevf_qv_disabl.patch
 	patches.drivers/ixgbevf-0033-ixgbevf-use-pci-drvdata-correctly-in-ixgbevf_suspend.patch
+	patches.drivers/ixgbevf-0034-ixgbevf-Convert-ring-storage-form-pointer-to-an-arra.patch
 
 	########################################################
 	# Wireless Networking
