ixgbevf: add tx counters (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14906,6 +14906,7 @@
 	patches.drivers/ixgbevf-0037-ixgbevf-make-use-of-the-dev-pointer-in-the-ixgbevf_r.patch
 	patches.drivers/ixgbevf-0038-ixgbevf-move-ring-specific-stats-into-ring-specific-.patch
 	patches.drivers/ixgbevf-0039-ixgbevf-remove-counters-for-Tx-Rx-checksum-offload.patch
+	patches.drivers/ixgbevf-0040-ixgbevf-add-tx-counters.patch
 
 	########################################################
 	# Wireless Networking
