net: use SPEED_UNKNOWN and DUPLEX_UNKNOWN when appropriate (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14930,6 +14930,7 @@
 	patches.drivers/ixgbevf-0061-ixgbevf-remove-open-coded-skb_cow_head.patch
 	patches.drivers/ixgbevf-0062-ixgbevf-remove-82599-from-the-module-description.patch
 	patches.drivers/ixgbevf-0063-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/ixgbevf-0064-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	########################################################
 	# Wireless Networking
