ixgbe: flush when in xmit_more mode and under descriptor pressure (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14838,6 +14838,7 @@
 	patches.drivers/ixgbe-0208-ixgbe-Delete-a-bunch-of-dead-code.patch
 	patches.drivers/ixgbe-0209-ixgbe-Make-return-values-more-direct.patch
 	patches.drivers/ixgbe-0210-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/ixgbe-0211-ixgbe-flush-when-in-xmit_more-mode-and-under-descrip.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
