ixgbe: Update ixgbe driver to use __netdev_pick_tx in ixgbe_select_queue (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14664,6 +14664,7 @@
 	patches.drivers/ixgbe-0034-ixgbe-Add-function-for-setting-XPS-queue-mapping.patch
 	patches.fixes/net-Split-core-bits-of-netdev_pick_tx-into-__netdev_.patch
 	patches.fixes/net-Export-__netdev_pick_tx-so-that-it-can-be-used-i.patch
+	patches.drivers/ixgbe-0037-ixgbe-Update-ixgbe-driver-to-use-__netdev_pick_tx-in.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
