remove init of dev->perm_addr in drivers (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14867,6 +14867,7 @@
 	patches.drivers/ixgbe-0237-net-Check-for-presence-of-IFLA_AF_SPEC.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
+	patches.drivers/ixgbevf-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 
 	########################################################
 	# Wireless Networking
