--- a/series.conf
+++ b/series.conf
@@ -14696,6 +14696,7 @@
 	patches.drivers/ixgbe-0066-ixgbe-add-WOL-support-for-new-subdevice-ID.patch
 	patches.drivers/ixgbe-0067-ixgbe-fix-EICR-write-in-ixgbe_msix_other.patch
 	patches.drivers/ixgbe-0068-ixgbe-fix-register-access-during-ethtool-loopback-te.patch
+	patches.drivers/ixgbe-0069-ixgbe-cache-AUTOC-reads.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
