ixgbevf: remove open-coded skb_cow_head (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14927,6 +14927,7 @@
 	patches.drivers/ixgbevf-0058-ixgbevf-Change-ixgbe_read_reg-to-ixgbevf_read_reg.patch
 	patches.drivers/ixgbevf-0059-ixgbevf-Fix-rcu-warnings-induced-by-LER.patch
 	patches.drivers/ixgbevf-0060-ixgbevf-Add-bit-to-mark-work-queue-initialization.patch
+	patches.drivers/ixgbevf-0061-ixgbevf-remove-open-coded-skb_cow_head.patch
 
 	########################################################
 	# Wireless Networking
