--- a/series.conf
+++ b/series.conf
@@ -14860,6 +14860,7 @@
 	patches.drivers/ixgbe-0230-ixgbe-fix-race-accessing-page-_count.patch
 	patches.drivers/ixgbe-0231-ixgbe-check-for-vfs-outside-of-sriov_num_vfs-before-.patch
 	patches.drivers/ixgbe-0232-ixgbe-fix-race-when-setting-advertised-speed.patch
+	patches.drivers/ixgbe-0233-ixgbe-phy-fix-uninitialized-status-in-ixgbe_setup_ph.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
