ixgbe: add braces around else block (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14810,6 +14810,7 @@
 	patches.drivers/ixgbe-0180-ixgbe-fix-function-like-macro-remove-semicolon.patch
 	patches.drivers/ixgbe-0181-ixgbe-fix-checkpatch-style-of-blank-line-after-decla.patch
 	patches.drivers/ixgbe-0182-ixgbe-fix-several-concatenated-strings-to-single-lin.patch
+	patches.drivers/ixgbe-0183-ixgbe-add-braces-around-else-block.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
