--- a/series.conf
+++ b/series.conf
@@ -14785,6 +14785,7 @@
 	patches.drivers/ixgbe-0155-ixgbe-check-Core-Clock-Disable-bit.patch
 	patches.drivers/ixgbe-0156-ixgbe-fix-ixgbe_stop_mac_link_on_d3_82599-to-check-m.patch
 	patches.drivers/ixgbe-0157-ixgbe-fix-ixgbe_setup_mac_link_82599-autoc-variables.patch
+	patches.drivers/ixgbe-0158-ixgbe-remove-unused-media-type.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
