ixgbe: set driver_max_VFs should be done before enabling SRIOV (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14757,6 +14757,7 @@
 	patches.drivers/ixgbe-0127-ixgbe-reinit_locked-should-be-called-with-rtnl_lock.patch
 	patches.drivers/ixgbe-0128-ixgbe-Fix-incorrect-logic-for-fixed-fiber-eeprom-wri.patch
 	patches.drivers/ixgbe-0129-ixgbe-define-IXGBE_MAX_VFS_DRV_LIMIT-macro-and-clean.patch
+	patches.drivers/ixgbe-0130-ixgbe-set-driver_max_VFs-should-be-done-before-enabl.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
