--- a/series.conf
+++ b/series.conf
@@ -14759,6 +14759,7 @@
 	patches.drivers/ixgbe-0129-ixgbe-define-IXGBE_MAX_VFS_DRV_LIMIT-macro-and-clean.patch
 	patches.drivers/ixgbe-0130-ixgbe-set-driver_max_VFs-should-be-done-before-enabl.patch
 	patches.drivers/ixgbe-0131-ixgbe-bump-version-number.patch
+	patches.drivers/ixgbe-0132-ixgbe-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
