--- a/series.conf
+++ b/series.conf
@@ -14736,6 +14736,7 @@
 	patches.drivers/ixgbe-0106-ixgbe-use-pcie_capability_read_word-to-simplify-code.patch
 	patches.drivers/ixgbe-0107-ixgbe-fix-rx-usecs-range-checks-for-BQL.patch
 	patches.drivers/ixgbe-0108-ixgbe-show-2-for-encoding-loss-on-PCIe-Gen3.patch
+	patches.drivers/ixgbe-0109-ixgbe-remove-unnecessary-duplication-of-PCIe-bandwid.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
