ixgbe: Check register reads for adapter removal (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14749,6 +14749,7 @@
 	patches.drivers/ixgbe-0119-ixbge-Protect-ixgbe_down-with-__IXGBE_DOWN-bit.patch
 	patches.drivers/ixgbe-0120-ixgbe-Use-static-inlines-instead-of-macros.patch
 	patches.drivers/ixgbe-0121-ixgbe-Make-ethtool-register-test-use-accessors.patch
+	patches.drivers/ixgbe-0122-ixgbe-Check-register-reads-for-adapter-removal.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
