--- a/series.conf
+++ b/series.conf
@@ -14744,6 +14744,7 @@
 	patches.drivers/ixgbe-0114-ixgbe-Make-ixgbe_identify_qsfp_module_generic-static.patch
 	patches.drivers/ixgbe-0115-ixgbe-Start-temperature-sensor-attribute-index-with-.patch
 	patches.drivers/ixgbe-0116-ixgbe-fix-for-unused-variable-warning-with-certain-c.patch
+	patches.drivers/ixgbe-0117-net-ixgbe-slight-optimization-of-addr-compare.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
