--- a/series.conf
+++ b/series.conf
@@ -14805,6 +14805,7 @@
 	patches.drivers/ixgbe-0175-ixgbe-remove-vlan_filter_disable-and-enable-function.patch
 	patches.drivers/ixgbe-0176-ixgbe-change-handling-of-multicast-filters.patch
 	patches.drivers/ixgbe-0177-ixgbe-improve-mac-filter-handling.patch
+	patches.drivers/ixgbe-0178-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
