--- a/series.conf
+++ b/series.conf
@@ -14849,6 +14849,7 @@
 	patches.drivers/ixgbe-0219-ixgbe-use-e_dev_warn-instead-of-netif_printk.patch
 	patches.drivers/ixgbe-0220-ixgbe-return-integer-from-ixgbe_acquire_msix_vectors.patch
 	patches.drivers/ixgbe-0221-ixgbe-move-msix_entries-allocation-into-ixgbe_acquir.patch
+	patches.drivers/ixgbe-0222-ixgbe-determine-vector-count-inside-ixgbe_acquire_ms.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
