ixgbevf: Adjust to handle unassigned MAC address from PF (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14877,6 +14877,7 @@
 	patches.drivers/ixgbevf-0008-ixgbevf-use-PCI_DEVICE_TABLE-macro.patch
 	patches.drivers/ixgbevf-0009-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
 	patches.drivers/ixgbevf-0010-ixgbevf-don-t-release-the-soft-entries.patch
+	patches.drivers/ixgbevf-0011-ixgbevf-Adjust-to-handle-unassigned-MAC-address-from.patch
 
 	########################################################
 	# Wireless Networking
