--- a/series.conf
+++ b/series.conf
@@ -14800,6 +14800,7 @@
 	patches.drivers/ixgbe-0170-ixgbe-remove-open-coded-skb_cow_head.patch
 	patches.drivers/ixgbe-0171-ixgbe-clean-up-Rx-time-stamping-code.patch
 	patches.drivers/ixgbe-0172-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
+	patches.drivers/ixgbe-0173-ixgbe-convert-low_water-into-an-array.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
