ixgbe: fix return values and memcpy parameters to eliminate Smatch warnings (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14652,6 +14652,7 @@
 	patches.drivers/ixgbe-0022-ixgbe-autoneg-variable-refactoring.patch
 	patches.drivers/ixgbe-0023-ixgbe-allow-reading-of-SFF-8472-data-over-i2c.patch
 	patches.drivers/ixgbe-0024-ixgbe-fix-potential-null-dereference.patch
+	patches.drivers/ixgbe-0025-ixgbe-fix-return-values-and-memcpy-parameters-to-eli.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
