ixgbe: fix possible data corruption in read_i2c_byte (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14668,6 +14668,7 @@
 	patches.drivers/ixgbe-0038-ixgbe-Make-ixgbe_setup_tc-usable-even-when-DCB-is-no.patch
 	patches.drivers/ixgbe-0039-ixgbe-Add-support-for-displaying-the-number-of-Tx-Rx.patch
 	patches.drivers/ixgbe-0040-ixgbe-Add-support-for-set_channels-ethtool-operation.patch
+	patches.drivers/ixgbe-0041-ixgbe-fix-possible-data-corruption-in-read_i2c_byte.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
