ixgbe: Add check for FW veto bit (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14766,6 +14766,7 @@
 	patches.drivers/ixgbe-0136-ixgbe-fix-to-use-correct-timeout-interval-for-memory.patch
 	patches.drivers/ixgbe-0137-ixgbe-collect-all-82599-AUTOC-code-in-one-function.patch
 	patches.drivers/ixgbe-0138-ixgbe-fix-bit-toggled-for-82599-reset-fix.patch
+	patches.drivers/ixgbe-0139-ixgbe-Add-check-for-FW-veto-bit.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
