ixgbe: add /* fallthrough */ comment to case statements (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14813,6 +14813,7 @@
 	patches.drivers/ixgbe-0183-ixgbe-add-braces-around-else-block.patch
 	patches.drivers/ixgbe-0184-ixgbe-don-t-check-NULL-for-debugfs_remove_recursive.patch
 	patches.drivers/ixgbe-0185-ixgbe-add-space-between-operands-to.patch
+	patches.drivers/ixgbe-0186-ixgbe-add-fallthrough-comment-to-case-statements.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
