ixgbevf: Make sure link status and speed are fetched (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14872,6 +14872,7 @@
 	patches.drivers/ixgbevf-0003-ixgbevf-Fix-link-up-messages.patch
 	patches.drivers/ixgbevf-0004-ixgbevf-Fix-statistics-corruption.patch
 	patches.drivers/ixgbevf-0005-ixgbevf-Fix-link-speed-message-to-support-100Mbps.patch
+	patches.drivers/ixgbevf-0006-ixgbevf-Make-sure-link-status-and-speed-are-fetched.patch
 
 	########################################################
 	# Wireless Networking
