--- a/series.conf
+++ b/series.conf
@@ -14781,6 +14781,7 @@
 	patches.drivers/ixgbe-0151-ixgbe-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/ixgbe-0152-ixgbe-add-ixgbe_write_pci_cfg_word-with-ixgbe_remove.patch
 	patches.drivers/ixgbe-0153-ixgbe-Convert-uses-of-__constant_-foo-to-foo.patch
+	patches.drivers/ixgbe-0154-ixgbe-fix-errors-related-to-protected-AUTOC-calls.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
