--- a/series.conf
+++ b/series.conf
@@ -14677,6 +14677,7 @@
 	patches.drivers/ixgbe-0047-ixgbe-Don-t-give-VFs-random-MAC-addresses.patch
 	patches.drivers/ixgbe-0048-ixgbe-fix-registration-order-of-driver-and-DCA-nofit.patch
 	patches.drivers/ixgbe-0049-ixgbe-Mask-off-check-of-frag_off-as-we-only-want-fra.patch
+	patches.drivers/ixgbe-0050-ixgbe-don-t-do-arithmetic-operations-on-bitmasks.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
