--- a/series.conf
+++ b/series.conf
@@ -14742,6 +14742,7 @@
 	patches.drivers/ixgbe-0112-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	patches.drivers/ixgbe-0113-ixgbe-add-warning-when-max_vfs-is-out-of-range.patch
 	patches.drivers/ixgbe-0114-ixgbe-Make-ixgbe_identify_qsfp_module_generic-static.patch
+	patches.drivers/ixgbe-0115-ixgbe-Start-temperature-sensor-attribute-index-with-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
