ixgbevf: Fix rcu warnings induced by LER (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14925,6 +14925,7 @@
 	patches.drivers/ixgbevf-0056-ixgbevf-Check-for-adapter-removal-on-register-writes.patch
 	patches.drivers/ixgbevf-0057-ixgbevf-Additional-adapter-removal-checks.patch
 	patches.drivers/ixgbevf-0058-ixgbevf-Change-ixgbe_read_reg-to-ixgbevf_read_reg.patch
+	patches.drivers/ixgbevf-0059-ixgbevf-Fix-rcu-warnings-induced-by-LER.patch
 
 	########################################################
 	# Wireless Networking
