--- a/series.conf
+++ b/series.conf
@@ -14903,6 +14903,7 @@
 	patches.drivers/ixgbevf-0034-ixgbevf-Convert-ring-storage-form-pointer-to-an-arra.patch
 	patches.drivers/ixgbevf-0035-ixgbevf-create-function-for-all-of-ring-init.patch
 	patches.drivers/ixgbevf-0036-ixgbevf-bump-version.patch
+	patches.drivers/ixgbevf-0037-ixgbevf-make-use-of-the-dev-pointer-in-the-ixgbevf_r.patch
 
 	########################################################
 	# Wireless Networking
