net: Export __netdev_pick_tx so that it can be used in modules (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14663,6 +14663,7 @@
 	patches.drivers/ixgbe-0033-ixgbe-Define-FCoE-and-Flow-director-limits-much-soon.patch
 	patches.drivers/ixgbe-0034-ixgbe-Add-function-for-setting-XPS-queue-mapping.patch
 	patches.fixes/net-Split-core-bits-of-netdev_pick_tx-into-__netdev_.patch
+	patches.fixes/net-Export-__netdev_pick_tx-so-that-it-can-be-used-i.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
