--- a/series.conf
+++ b/series.conf
@@ -14853,6 +14853,7 @@
 	patches.drivers/ixgbe-0223-ixgbe-use-e_dev_warn-instead-of-e_err-for-displaying.patch
 	patches.drivers/ixgbe-0224-ixgbe-use-e_dev_warn-instead-of-netif_printk.patch
 	patches.drivers/ixgbe-0225-ixgbe-add-warnings-for-other-disabled-features-witho.patch
+	patches.drivers/ixgbe-0226-ixgbe-remove-IXGBE_FLAG_MSI-X-_CAPABLE-flags.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
