ixgbe: Add support for WoL on 82599 SFP+ LOM (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14687,6 +14687,7 @@
 	patches.drivers/ixgbe-0057-ixgbe-bump-version-number.patch
 	patches.drivers/ixgbe-0058-ixgbe-Fix-a-bug-in-setting-VF-VLAN-via-PF.patch
 	patches.drivers/ixgbe-0059-ixgbe-in-shutdown-do-netif_running-under-rtnl_lock.patch
+	patches.drivers/ixgbe-0060-ixgbe-Add-support-for-WoL-on-82599-SFP-LOM.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
