--- a/series.conf
+++ b/series.conf
@@ -14639,6 +14639,7 @@
 	patches.drivers/ixgbe-0009-ixgbe-Update-ptp_overflow-check-comment-and-jiffies.patch
 	patches.drivers/ixgbe-0010-ixgbe-Use-watchdog-check-in-favor-of-BPF-for-detecti.patch
 	patches.drivers/ixgbe-0011-ixgbe-Add-ptp-work-item-to-poll-for-the-Tx-timestamp.patch
+	patches.drivers/ixgbe-0012-ixgbe-add-warning-when-scheduling-reset.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
