--- a/series.conf
+++ b/series.conf
@@ -14797,6 +14797,7 @@
 	patches.drivers/ixgbe-0167-ixgbe-fix-ixgbe_check_reset_blocked-declaration.patch
 	patches.drivers/ixgbe-0168-ixgbe-Fix-rcu-warnings-induced-by-LER.patch
 	patches.drivers/ixgbe-0169-ixgbe-Add-bit-to-mark-service-task-initialization.patch
+	patches.drivers/ixgbe-0170-ixgbe-remove-open-coded-skb_cow_head.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
