--- a/series.conf
+++ b/series.conf
@@ -14844,6 +14844,7 @@
 	patches.drivers/ixgbe-0214-ixgbe-add-comment-noting-recalculation-of-queues.patch
 	patches.drivers/ixgbe-0215-ixgbe-Resolve-warnings-produced-in-W-2-builds.patch
 	patches.drivers/ixgbe-0216-ixgbe-Drop-Rx-alloc-at-end-of-Rx-cleanup.patch
+	patches.drivers/ixgbe-0217-ixgbe-remove-useless-bd_number-from-adapter-struct.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
