ixgbe: limit setting speed to only one at a time for QSFP modules (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14725,6 +14725,7 @@
 	patches.drivers/ixgbe-0095-ixgbe-add-support-for-older-QSFP-active-DA-cables.patch
 	patches.drivers/ixgbe-0096-ixgbe-fully-disable-hardware-RSC-logic-when-disablin.patch
 	patches.drivers/ixgbe-0097-ixgbe-fix-ethtool-loopback-diagnostic-with-DCB-enabl.patch
+	patches.drivers/ixgbe-0098-ixgbe-limit-setting-speed-to-only-one-at-a-time-for-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
