ixgbe: rename wol_supported to more fitting wol_enabled (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14691,6 +14691,7 @@
 	patches.drivers/ixgbe-0061-ixgbe-Remove-unnecessary-ifdef-CONFIG_DEBUG_FS-tests.patch
 	patches.drivers/ixgbe-0062-ixgbe-fix-possible-divide-by-zero-in-ixgbe_update_it.patch
 	patches.drivers/ixgbe-0063-ixgbe-add-driver-support-for-x520-OCP-adapter.patch
+	patches.drivers/ixgbe-0064-ixgbe-rename-wol_supported-to-more-fitting-wol_enabl.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
