ixgbevf: Additional adapter removal checks (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14923,6 +14923,7 @@
 	patches.drivers/ixgbevf-0054-ixgbevf-Make-the-ethtool-register-test-use-accessors.patch
 	patches.drivers/ixgbevf-0055-ixgbevf-Check-register-reads-for-adapter-removal.patch
 	patches.drivers/ixgbevf-0056-ixgbevf-Check-for-adapter-removal-on-register-writes.patch
+	patches.drivers/ixgbevf-0057-ixgbevf-Additional-adapter-removal-checks.patch
 
 	########################################################
 	# Wireless Networking
