ixgbevf: cleanup redundant mailbox read failure check (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14882,6 +14882,7 @@
 	patches.drivers/ixgbevf-0013-DMA-API-net-intel-ixgbevf-fix-32-bit-DMA-mask-handli.patch
 	patches.drivers/ixgbevf-0014-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/ixgbevf-0015-ixgbevf-do-not-print-registers-to-dmesg-in-ixgbevf_g.patch
+	patches.drivers/ixgbevf-0016-ixgbevf-cleanup-redundant-mailbox-read-failure-check.patch
 
 	########################################################
 	# Wireless Networking
