--- a/series.conf
+++ b/series.conf
@@ -14829,6 +14829,7 @@
 	patches.drivers/ixgbe-0199-ixgbe-remove-unnecessary-break-after-return.patch
 	patches.drivers/ixgbe-0200-ixgbe-Fix-possible-null-dereference-in-error-path.patch
 	patches.drivers/ixgbe-0201-ixgbe-Change-some-uses-of-strncpy-to-strlcpy.patch
+	patches.drivers/ixgbe-0202-ixgbe-fix-use-of-list_for_each-in-ixgbe_enumerate_fu.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
