--- a/series.conf
+++ b/series.conf
@@ -14883,6 +14883,7 @@
 	patches.drivers/ixgbevf-0014-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/ixgbevf-0015-ixgbevf-do-not-print-registers-to-dmesg-in-ixgbevf_g.patch
 	patches.drivers/ixgbevf-0016-ixgbevf-cleanup-redundant-mailbox-read-failure-check.patch
+	patches.drivers/ixgbevf-0017-ixgbevf-add-wait-for-Rx-queue-disable.patch
 
 	########################################################
 	# Wireless Networking
