--- a/series.conf
+++ b/series.conf
@@ -14778,6 +14778,7 @@
 	patches.drivers/ixgbe-0148-ixgbe-fixup-header-for-ixgbe_set_rxpba_82598.patch
 	patches.drivers/ixgbe-0149-ixgbe-fix-some-multiline-hw_dbg-prints.patch
 	patches.drivers/ixgbe-0150-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
+	patches.drivers/ixgbe-0151-ixgbe-Don-t-receive-packets-when-the-napi-budget-0.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
