ixgbe: Fix rcu warnings induced by LER (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14795,6 +14795,7 @@
 	patches.drivers/ixgbe-0165-ixgbe-never-generate-both-software-and-hardware-time.patch
 	patches.drivers/ixgbe-0166-ixgbe-fix-race-conditions-on-queuing-skb-for-HW-time.patch
 	patches.drivers/ixgbe-0167-ixgbe-fix-ixgbe_check_reset_blocked-declaration.patch
+	patches.drivers/ixgbe-0168-ixgbe-Fix-rcu-warnings-induced-by-LER.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
