--- a/series.conf
+++ b/series.conf
@@ -14729,6 +14729,7 @@
 	patches.drivers/ixgbe-0099-ixgbe-fix-ethtool-reporting-of-supported-links-for-S.patch
 	patches.drivers/ixgbe-0100-DMA-API-net-intel-ixgbe-fix-32-bit-DMA-mask-handling.patch
 	patches.drivers/ixgbe-0101-intel-Remove-extern-from-function-prototypes.patch
+	patches.drivers/ixgbe-0102-ixgbe-ethtool-DCB-registers-dump-for-82599-and-x540.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
