--- a/series.conf
+++ b/series.conf
@@ -14843,6 +14843,7 @@
 	patches.drivers/ixgbe-0213-ixgbe-reset-interface-on-link-loss-with-pending-Tx-w.patch
 	patches.drivers/ixgbe-0214-ixgbe-add-comment-noting-recalculation-of-queues.patch
 	patches.drivers/ixgbe-0215-ixgbe-Resolve-warnings-produced-in-W-2-builds.patch
+	patches.drivers/ixgbe-0216-ixgbe-Drop-Rx-alloc-at-end-of-Rx-cleanup.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
