ixgbevf: Protect ixgbevf_down with __IXGBEVF_DOWN bit (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14917,6 +14917,7 @@
 	patches.drivers/ixgbevf-0048-ixgbevf-delete-unneeded-call-to-pci_set_power_state.patch
 	patches.drivers/ixgbevf-0049-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/ixgbevf-0050-ixgbevf-Indicate-removal-state-explicitly.patch
+	patches.drivers/ixgbevf-0051-ixgbevf-Protect-ixgbevf_down-with-__IXGBEVF_DOWN-bit.patch
 
 	########################################################
 	# Wireless Networking
