--- a/series.conf
+++ b/series.conf
@@ -14703,6 +14703,7 @@
 	patches.drivers/ixgbe-0073-ixgbe-Fix-Tx-Hang-issue-with-lldpad-on-82598EB.patch
 	patches.drivers/ixgbe-0074-ixgbe-Retain-VLAN-filtering-in-promiscuous-VT-mode.patch
 	patches.drivers/ixgbe-0075-ixgbe-Use-pci_vfs_assigned-instead-of-ixgbe_vfs_are_.patch
+	patches.drivers/ixgbe-0076-ixgbe-fix-fc-autoneg-ethtool-reporting.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
