ixgbe: rename ixgbe_ptp_enable to ixgbe_ptp_feature_enable (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14816,6 +14816,7 @@
 	patches.drivers/ixgbe-0186-ixgbe-add-fallthrough-comment-to-case-statements.patch
 	patches.drivers/ixgbe-0187-igb-ixgbe-remove-return-statements-for-void-function.patch
 	patches.drivers/ixgbe-0188-ixgbe-fix-linking-at-100Mbps-on-copper-devices-with-.patch
+	patches.drivers/ixgbe-0189-ixgbe-rename-ixgbe_ptp_enable-to-ixgbe_ptp_feature_e.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
