ixgbe: remove unnecessary break after goto (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14825,6 +14825,7 @@
 	patches.drivers/ixgbe-0195-ixgbe-fix-detection-of-SFP-capable-interfaces.patch
 	patches.drivers/ixgbe-0196-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/ixgbe-0197-ixgbe-change-PTP-NSECS_PER_SEC-to-IXGBE_PTP_PPS_HALF.patch
+	patches.drivers/ixgbe-0198-ixgbe-remove-unnecessary-break-after-goto.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
