ixgbe: cleanup ixgbe_enumerate_functions (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14732,6 +14732,7 @@
 	patches.drivers/ixgbe-0102-ixgbe-ethtool-DCB-registers-dump-for-82599-and-x540.patch
 	patches.drivers/ixgbe-0103-ixgbe-Cleanup-the-use-of-tabs-and-spaces.patch
 	patches.drivers/ixgbe-0104-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
+	patches.drivers/ixgbe-0105-ixgbe-cleanup-ixgbe_enumerate_functions.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
