--- a/series.conf
+++ b/series.conf
@@ -14879,6 +14879,7 @@
 	patches.drivers/ixgbevf-0010-ixgbevf-don-t-release-the-soft-entries.patch
 	patches.drivers/ixgbevf-0011-ixgbevf-Adjust-to-handle-unassigned-MAC-address-from.patch
 	patches.drivers/ixgbevf-0012-drivers-net-Convert-uses-of-compare_ether_addr-to-et.patch
+	patches.drivers/ixgbevf-0013-DMA-API-net-intel-ixgbevf-fix-32-bit-DMA-mask-handli.patch
 
 	########################################################
 	# Wireless Networking
