ixgbe: Clear head write-back registers on VF reset (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14753,6 +14753,7 @@
 	patches.drivers/ixgbe-0123-ixgbe-Check-for-adapter-removal-on-register-writes.patch
 	patches.drivers/ixgbe-0124-ixgbe-Additional-adapter-removal-checks.patch
 	patches.drivers/ixgbe-0125-ixgbe-Force-QDE-via-PFQDE-for-VFs-during-reset.patch
+	patches.drivers/ixgbe-0126-ixgbe-Clear-head-write-back-registers-on-VF-reset.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
