ixgbe: Cleanup the use of tabs and spaces (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14730,6 +14730,7 @@
 	patches.drivers/ixgbe-0100-DMA-API-net-intel-ixgbe-fix-32-bit-DMA-mask-handling.patch
 	patches.drivers/ixgbe-0101-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/ixgbe-0102-ixgbe-ethtool-DCB-registers-dump-for-82599-and-x540.patch
+	patches.drivers/ixgbe-0103-ixgbe-Cleanup-the-use-of-tabs-and-spaces.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
