ixgbe: fix some multiline hw_dbg prints (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14776,6 +14776,7 @@
 	patches.drivers/ixgbe-0146-ixgbe-move-setting-rx_pb_size-into-get_invariants.patch
 	patches.drivers/ixgbe-0147-ixgbe-add-Linux-NICS-mailing-list-to-contact-info.patch
 	patches.drivers/ixgbe-0148-ixgbe-fixup-header-for-ixgbe_set_rxpba_82598.patch
+	patches.drivers/ixgbe-0149-ixgbe-fix-some-multiline-hw_dbg-prints.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
