--- a/series.conf
+++ b/series.conf
@@ -14661,6 +14661,7 @@
 	patches.drivers/ixgbe-0031-ixgbe-Only-set-gso_type-to-SKB_GSO_TCPV4-as-RSC-does.patch
 	patches.drivers/ixgbe-0032-ixgbe-refactor-initialization-of-feature-flags.patch
 	patches.drivers/ixgbe-0033-ixgbe-Define-FCoE-and-Flow-director-limits-much-soon.patch
+	patches.drivers/ixgbe-0034-ixgbe-Add-function-for-setting-XPS-queue-mapping.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
