ixgbe: add Linux NICS mailing list to contact info (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14774,6 +14774,7 @@
 	patches.drivers/ixgbe-0144-net-ixgbe-calls-skb_set_hash.patch
 	patches.drivers/ixgbe-0145-ixgbe-Fix-format-string-in-ixgbe_fcoe.c.patch
 	patches.drivers/ixgbe-0146-ixgbe-move-setting-rx_pb_size-into-get_invariants.patch
+	patches.drivers/ixgbe-0147-ixgbe-add-Linux-NICS-mailing-list-to-contact-info.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
