ixgbevf: use pci drvdata correctly in ixgbevf_suspend() (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14899,6 +14899,7 @@
 	patches.drivers/ixgbevf-0030-ixgbe-Focus-config-of-head-tail-ntc-and-ntu-all-into.patch
 	patches.drivers/ixgbevf-0031-ixgbevf-add-DCB-configuration-into-queue-setup.patch
 	patches.drivers/ixgbevf-0032-ixgbevf-set-the-disable-state-when-ixgbevf_qv_disabl.patch
+	patches.drivers/ixgbevf-0033-ixgbevf-use-pci-drvdata-correctly-in-ixgbevf_suspend.patch
 
 	########################################################
 	# Wireless Networking
