--- a/series.conf
+++ b/series.conf
@@ -14783,6 +14783,7 @@
 	patches.drivers/ixgbe-0153-ixgbe-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/ixgbe-0154-ixgbe-fix-errors-related-to-protected-AUTOC-calls.patch
 	patches.drivers/ixgbe-0155-ixgbe-check-Core-Clock-Disable-bit.patch
+	patches.drivers/ixgbe-0156-ixgbe-fix-ixgbe_stop_mac_link_on_d3_82599-to-check-m.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
