ixgbe: call pcie_get_mimimum_link to check if device has enough bandwidth (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14710,6 +14710,7 @@
 	patches.fixes/PCI-expose-pcie_link_speed-and-pcix_bus_speed-arrays.patch
 	patches.fixes/PCI-move-enum-pcie_link_width-into-pci.h.patch
 	patches.fixes/PCI-Add-function-to-obtain-minimum-link-width-and-sp.patch
+	patches.drivers/ixgbe-0083-ixgbe-call-pcie_get_mimimum_link-to-check-if-device-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
