ixgbevf: Check register reads for adapter removal (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14921,6 +14921,7 @@
 	patches.drivers/ixgbevf-0052-ixgbevf-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/ixgbevf-0053-ixgbevf-Use-static-inlines-instead-of-macros.patch
 	patches.drivers/ixgbevf-0054-ixgbevf-Make-the-ethtool-register-test-use-accessors.patch
+	patches.drivers/ixgbevf-0055-ixgbevf-Check-register-reads-for-adapter-removal.patch
 
 	########################################################
 	# Wireless Networking
