ixgbe: fix setting of TXDCTL.WTRHESH when ITR is set to 0 and no BQL (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14856,6 +14856,7 @@
 	patches.drivers/ixgbe-0226-ixgbe-remove-IXGBE_FLAG_MSI-X-_CAPABLE-flags.patch
 	patches.drivers/ixgbe-0227-ixgbe-Convert-the-normal-transmit-complete-path-to-d.patch
 	patches.drivers/ixgbe-0228-ixgbe-remove-wait-loop-on-autoneg-for-copper-devices.patch
+	patches.drivers/ixgbe-0229-ixgbe-fix-setting-of-TXDCTL.WTRHESH-when-ITR-is-set-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
