ixgbe: clean up Rx time stamping code (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14798,6 +14798,7 @@
 	patches.drivers/ixgbe-0168-ixgbe-Fix-rcu-warnings-induced-by-LER.patch
 	patches.drivers/ixgbe-0169-ixgbe-Add-bit-to-mark-service-task-initialization.patch
 	patches.drivers/ixgbe-0170-ixgbe-remove-open-coded-skb_cow_head.patch
+	patches.drivers/ixgbe-0171-ixgbe-clean-up-Rx-time-stamping-code.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
