ixgbevf: don't release the soft entries (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14876,6 +14876,7 @@
 	patches.drivers/ixgbevf-0007-ixgbevf-Make-next_to_watch-a-pointer-and-adjust-memo.patch
 	patches.drivers/ixgbevf-0008-ixgbevf-use-PCI_DEVICE_TABLE-macro.patch
 	patches.drivers/ixgbevf-0009-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
+	patches.drivers/ixgbevf-0010-ixgbevf-don-t-release-the-soft-entries.patch
 
 	########################################################
 	# Wireless Networking
