--- a/series.conf
+++ b/series.conf
@@ -14683,6 +14683,7 @@
 	patches.drivers/ixgbe-0053-ixgbe-create-conversion-functions-from-link_status-t.patch
 	patches.drivers/ixgbe-0054-ixgbe-enable-devices-with-internal-switch-to-read-pc.patch
 	patches.drivers/ixgbe-0055-ixgbe-fix-MNG-FW-support-when-adapter-not-up.patch
+	patches.drivers/ixgbe-0056-ixgbe-Fix-1G-link-WoL.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
