--- a/series.conf
+++ b/series.conf
@@ -14881,6 +14881,7 @@
 	patches.drivers/ixgbevf-0012-drivers-net-Convert-uses-of-compare_ether_addr-to-et.patch
 	patches.drivers/ixgbevf-0013-DMA-API-net-intel-ixgbevf-fix-32-bit-DMA-mask-handli.patch
 	patches.drivers/ixgbevf-0014-intel-Remove-extern-from-function-prototypes.patch
+	patches.drivers/ixgbevf-0015-ixgbevf-do-not-print-registers-to-dmesg-in-ixgbevf_g.patch
 
 	########################################################
 	# Wireless Networking
