--- a/series.conf
+++ b/series.conf
@@ -14756,6 +14756,7 @@
 	patches.drivers/ixgbe-0126-ixgbe-Clear-head-write-back-registers-on-VF-reset.patch
 	patches.drivers/ixgbe-0127-ixgbe-reinit_locked-should-be-called-with-rtnl_lock.patch
 	patches.drivers/ixgbe-0128-ixgbe-Fix-incorrect-logic-for-fixed-fiber-eeprom-wri.patch
+	patches.drivers/ixgbe-0129-ixgbe-define-IXGBE_MAX_VFS_DRV_LIMIT-macro-and-clean.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
