--- a/series.conf
+++ b/series.conf
@@ -14737,6 +14737,7 @@
 	patches.drivers/ixgbe-0107-ixgbe-fix-rx-usecs-range-checks-for-BQL.patch
 	patches.drivers/ixgbe-0108-ixgbe-show-2-for-encoding-loss-on-PCIe-Gen3.patch
 	patches.drivers/ixgbe-0109-ixgbe-remove-unnecessary-duplication-of-PCIe-bandwid.patch
+	patches.drivers/ixgbe-0110-ixgbe-Reduce-memory-consumption-with-larger-page-siz.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
