--- a/series.conf
+++ b/series.conf
@@ -14855,6 +14855,7 @@
 	patches.drivers/ixgbe-0225-ixgbe-add-warnings-for-other-disabled-features-witho.patch
 	patches.drivers/ixgbe-0226-ixgbe-remove-IXGBE_FLAG_MSI-X-_CAPABLE-flags.patch
 	patches.drivers/ixgbe-0227-ixgbe-Convert-the-normal-transmit-complete-path-to-d.patch
+	patches.drivers/ixgbe-0228-ixgbe-remove-wait-loop-on-autoneg-for-copper-devices.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
