--- a/series.conf
+++ b/series.conf
@@ -14871,6 +14871,7 @@
 	patches.drivers/ixgbevf-0002-ixgbevf-Synch-out-of-tree-and-in-tree-mailbox-interr.patch
 	patches.drivers/ixgbevf-0003-ixgbevf-Fix-link-up-messages.patch
 	patches.drivers/ixgbevf-0004-ixgbevf-Fix-statistics-corruption.patch
+	patches.drivers/ixgbevf-0005-ixgbevf-Fix-link-speed-message-to-support-100Mbps.patch
 
 	########################################################
 	# Wireless Networking
