ixgbe: ethtool ixgbe_diag_test cleanup (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14634,6 +14634,7 @@
 	patches.drivers/ixgbe-0004-ixgbe-Always-use-context-0-even-for-FCoE-and-TSO.patch
 	patches.drivers/ixgbe-0005-ixgbe-Update-ixgbe-Tx-flags-to-improve-code-efficien.patch
 	patches.drivers/ixgbe-0006-ixgbe-Improve-performance-and-reduce-size-of-ixgbe_t.patch
+	patches.drivers/ixgbe-0007-ixgbe-ethtool-ixgbe_diag_test-cleanup.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
