--- a/series.conf
+++ b/series.conf
@@ -14808,6 +14808,7 @@
 	patches.drivers/ixgbe-0178-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/ixgbe-0179-ixgbe-clean-up-checkpatch-warnings-about-CODE_INDENT.patch
 	patches.drivers/ixgbe-0180-ixgbe-fix-function-like-macro-remove-semicolon.patch
+	patches.drivers/ixgbe-0181-ixgbe-fix-checkpatch-style-of-blank-line-after-decla.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
