--- a/series.conf
+++ b/series.conf
@@ -14875,6 +14875,7 @@
 	patches.drivers/ixgbevf-0006-ixgbevf-Make-sure-link-status-and-speed-are-fetched.patch
 	patches.drivers/ixgbevf-0007-ixgbevf-Make-next_to_watch-a-pointer-and-adjust-memo.patch
 	patches.drivers/ixgbevf-0008-ixgbevf-use-PCI_DEVICE_TABLE-macro.patch
+	patches.drivers/ixgbevf-0009-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
 
 	########################################################
 	# Wireless Networking
