--- a/series.conf
+++ b/series.conf
@@ -14720,6 +14720,7 @@
 	patches.drivers/ixgbe-0090-ixgbe-fix-link-test-when-connected-to-1Gbps-link-par.patch
 	patches.drivers/ixgbe-0091-ixgbe-zero-out-mailbox-buffer-on-init.patch
 	patches.drivers/ixgbe-0092-ixgbe-cleanup-some-log-messages.patch
+	patches.drivers/ixgbe-0093-ixgbe-add-1Gbps-support-for-QSFP.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
