--- a/series.conf
+++ b/series.conf
@@ -14750,6 +14750,7 @@
 	patches.drivers/ixgbe-0120-ixgbe-Use-static-inlines-instead-of-macros.patch
 	patches.drivers/ixgbe-0121-ixgbe-Make-ethtool-register-test-use-accessors.patch
 	patches.drivers/ixgbe-0122-ixgbe-Check-register-reads-for-adapter-removal.patch
+	patches.drivers/ixgbe-0123-ixgbe-Check-for-adapter-removal-on-register-writes.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
