ixgbe: cleanup IXGBE_DESC_UNUSED (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14895,6 +14895,7 @@
 	patches.drivers/ixgbevf-0026-ixgbevf-add-BP_EXTENDED_STATS-for-CONFIG_NET_RX_BUSY.patch
 	patches.drivers/ixgbevf-0027-ixgbevf-Add-zero_base-handler-to-network-statistics.patch
 	patches.drivers/ixgbevf-0028-ixgbevf-remove-redundant-workaround.patch
+	patches.drivers/ixgbevf-0029-ixgbe-cleanup-IXGBE_DESC_UNUSED.patch
 
 	########################################################
 	# Wireless Networking
