ixgbe: fix for unused variable warning with certain config (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14743,6 +14743,7 @@
 	patches.drivers/ixgbe-0113-ixgbe-add-warning-when-max_vfs-is-out-of-range.patch
 	patches.drivers/ixgbe-0114-ixgbe-Make-ixgbe_identify_qsfp_module_generic-static.patch
 	patches.drivers/ixgbe-0115-ixgbe-Start-temperature-sensor-attribute-index-with-.patch
+	patches.drivers/ixgbe-0116-ixgbe-fix-for-unused-variable-warning-with-certain-c.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
