--- a/series.conf
+++ b/series.conf
@@ -14657,6 +14657,7 @@
 	patches.drivers/ixgbe-0027-ixgbe-Replace-rmb-in-Tx-cleanup-with-read_barrier_de.patch
 	patches.drivers/ixgbe-0028-ixgbe-Fix-SR-IOV-MTU-warning.patch
 	patches.drivers/ixgbe-0029-drivers-net-Remove-remaining-alloc-OOM-messages.patch
+	patches.drivers/ixgbe-0030-ixgbe-fix-gso-type.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
