net: Check for presence of IFLA_AF_SPEC (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14864,6 +14864,7 @@
 	patches.drivers/ixgbe-0234-ixgbe-Correctly-disable-VLAN-filter-in-promiscuous-m.patch
 	patches.drivers/ixgbe-0235-ixgbe-fix-use-after-free-adapter-state-test-in-ixgbe.patch
 	patches.drivers/ixgbe-0236-net-Validate-IFLA_BRIDGE_MODE-attribute-length.patch
+	patches.drivers/ixgbe-0237-net-Check-for-presence-of-IFLA_AF_SPEC.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
