intel: Remove extern from function prototypes (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14880,6 +14880,7 @@
 	patches.drivers/ixgbevf-0011-ixgbevf-Adjust-to-handle-unassigned-MAC-address-from.patch
 	patches.drivers/ixgbevf-0012-drivers-net-Convert-uses-of-compare_ether_addr-to-et.patch
 	patches.drivers/ixgbevf-0013-DMA-API-net-intel-ixgbevf-fix-32-bit-DMA-mask-handli.patch
+	patches.drivers/ixgbevf-0014-intel-Remove-extern-from-function-prototypes.patch
 
 	########################################################
 	# Wireless Networking
