--- a/series.conf
+++ b/series.conf
@@ -14674,6 +14674,7 @@
 	patches.drivers/ixgbe-0044-ixgbe-Update-DESC_NEEDED-define-to-adjust-for-change.patch
 	patches.fixes/net-generic-fdb-support-for-drivers-without-ndo_fdb_.patch
 	patches.drivers/ixgbe-0046-ixgbe-Make-use-of-the-default-fdb-handlers.patch
+	patches.drivers/ixgbe-0047-ixgbe-Don-t-give-VFs-random-MAC-addresses.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
