ixgbevf: Add bit to mark work queue initialization (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14926,6 +14926,7 @@
 	patches.drivers/ixgbevf-0057-ixgbevf-Additional-adapter-removal-checks.patch
 	patches.drivers/ixgbevf-0058-ixgbevf-Change-ixgbe_read_reg-to-ixgbevf_read_reg.patch
 	patches.drivers/ixgbevf-0059-ixgbevf-Fix-rcu-warnings-induced-by-LER.patch
+	patches.drivers/ixgbevf-0060-ixgbevf-Add-bit-to-mark-work-queue-initialization.patch
 
 	########################################################
 	# Wireless Networking
