--- a/series.conf
+++ b/series.conf
@@ -14878,6 +14878,7 @@
 	patches.drivers/ixgbevf-0009-drivers-net-Remove-dma_alloc_coherent-OOM-messages.patch
 	patches.drivers/ixgbevf-0010-ixgbevf-don-t-release-the-soft-entries.patch
 	patches.drivers/ixgbevf-0011-ixgbevf-Adjust-to-handle-unassigned-MAC-address-from.patch
+	patches.drivers/ixgbevf-0012-drivers-net-Convert-uses-of-compare_ether_addr-to-et.patch
 
 	########################################################
 	# Wireless Networking
