--- a/series.conf
+++ b/series.conf
@@ -14717,6 +14717,7 @@
 	patches.drivers/ixgbe-0087-ixgbe-disable-link-when-adapter-goes-down.patch
 	patches.drivers/ixgbe-0088-ixgbe-Check-return-value-on-eeprom-reads.patch
 	patches.drivers/ixgbe-0089-ixgbe-fix-incorrect-limit-value-in-ring-transverse.patch
+	patches.drivers/ixgbe-0090-ixgbe-fix-link-test-when-connected-to-1Gbps-link-par.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
