ixgbevf: fix skb->pkt_type checks (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14913,6 +14913,7 @@
 	patches.drivers/ixgbevf-0044-ixgbevf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
 	patches.drivers/ixgbevf-0045-ixgbevf-fix-handling-of-tx-checksumming.patch
 	patches.drivers/ixgbevf-0046-ixgbevf-add-check-for-CHECKSUM_PARTIAL-when-doing-TS.patch
+	patches.drivers/ixgbevf-0047-ixgbevf-fix-skb-pkt_type-checks.patch
 
 	########################################################
 	# Wireless Networking
