ixgbe: Make ixgbe_setup_tc usable even when DCB is not enabled (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14665,6 +14665,7 @@
 	patches.fixes/net-Split-core-bits-of-netdev_pick_tx-into-__netdev_.patch
 	patches.fixes/net-Export-__netdev_pick_tx-so-that-it-can-be-used-i.patch
 	patches.drivers/ixgbe-0037-ixgbe-Update-ixgbe-driver-to-use-__netdev_pick_tx-in.patch
+	patches.drivers/ixgbe-0038-ixgbe-Make-ixgbe_setup_tc-usable-even-when-DCB-is-no.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
