--- a/series.conf
+++ b/series.conf
@@ -14919,6 +14919,7 @@
 	patches.drivers/ixgbevf-0050-ixgbevf-Indicate-removal-state-explicitly.patch
 	patches.drivers/ixgbevf-0051-ixgbevf-Protect-ixgbevf_down-with-__IXGBEVF_DOWN-bit.patch
 	patches.drivers/ixgbevf-0052-ixgbevf-Convert-uses-of-__constant_-foo-to-foo.patch
+	patches.drivers/ixgbevf-0053-ixgbevf-Use-static-inlines-instead-of-macros.patch
 
 	########################################################
 	# Wireless Networking
