ixgbe: allow reading of SFF-8472 data over i2c (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14650,6 +14650,7 @@
 	patches.drivers/ixgbe-0020-ixgbe-rename-autoneg-variables.patch
 	patches.drivers/ixgbe-0021-ixgbe-removed-unused-variable-from-setup_link_speed.patch
 	patches.drivers/ixgbe-0022-ixgbe-autoneg-variable-refactoring.patch
+	patches.drivers/ixgbe-0023-ixgbe-allow-reading-of-SFF-8472-data-over-i2c.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
