ixgbevf: Check for adapter removal on register writes (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14922,6 +14922,7 @@
 	patches.drivers/ixgbevf-0053-ixgbevf-Use-static-inlines-instead-of-macros.patch
 	patches.drivers/ixgbevf-0054-ixgbevf-Make-the-ethtool-register-test-use-accessors.patch
 	patches.drivers/ixgbevf-0055-ixgbevf-Check-register-reads-for-adapter-removal.patch
+	patches.drivers/ixgbevf-0056-ixgbevf-Check-for-adapter-removal-on-register-writes.patch
 
 	########################################################
 	# Wireless Networking
