--- a/supported.conf
+++ b/supported.conf
@@ -224,7 +224,7 @@
 		drivers/block/loop_fish2
 		drivers/block/mtip32xx/mtip32xx
 		drivers/block/nbd				# Network Block Device
--		drivers/block/nvme				# Hardware not ready for SP3
+		drivers/block/nvme
 -		drivers/block/osdblk
 -		drivers/block/paride/*
 		drivers/block/pktcdvd
