--- a/series.conf
+++ b/series.conf
@@ -5055,6 +5055,7 @@
 	patches.fixes/netfilter-nfnetlink_queue-add-net-namespace-support-.patch
 	patches.kabi/kabi-protect-struct-net-from-bnc-877013-changes.patch
 	patches.fixes/netfilter-conntrack-disable-generic-tracking-for-known-protos.patch
+	patches.fixes/netfilter-do-not-drop-packet-on-insert-collision.patch
 
 	########################################################
 	# PCI and PCI hotplug
