x86: irq: Check for valid irq descriptor in check_irq_vectors_for_cpu_disable (bnc#914726).

--- a/series.conf
+++ b/series.conf
@@ -16957,6 +16957,9 @@
 	# bsc#912705, CVE-2014-9585
 	patches.arch/x86_64-vdso-fix-the-vdso-address-randomization-algorithm.patch
 
+	# bnc#914726 L3: Partner-L3: panic during poweroff in check_irq_vectors_for_cpu_disable+0x83/0x1b0
+	patches.fixes/x86-irq-check-for-valid-irq-descriptor-in-check_irq_vectors_for_cpu_disable
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
