crypto: add missing crypto module aliases (bsc#914423).

--- a/series.conf
+++ b/series.conf
@@ -14958,6 +14958,7 @@
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
+	patches.fixes/crypto-add-missing-crypto-module-aliases
 
 	##########################################################
 	# AppArmor
