crypto: include crypto- module prefix in template (bsc#914423).

--- a/series.conf
+++ b/series.conf
@@ -14957,6 +14957,7 @@
 	patches.fixes/crypto-testmgr-allow-aesni-and-clmulni.patch
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
+	patches.fixes/crypto-include-crypto-module-prefix-in-template
 
 	##########################################################
 	# AppArmor
