crypto: prefix module autoloading with "crypto-" (bsc#914423).

--- a/series.conf
+++ b/series.conf
@@ -14956,6 +14956,8 @@
 
 	patches.fixes/crypto-testmgr-allow-aesni-and-clmulni.patch
 
+	patches.fixes/crypto-prefix-module-autoloading-with-crypto
+
 	##########################################################
 	# AppArmor
 	##########################################################
