--- a/series.conf
+++ b/series.conf
@@ -17345,6 +17345,8 @@
 	patches.fixes/random-02-allow-fractional-bits-to-be-tracked
 	patches.fixes/random-03-account-for-entropy-loss-due-to-overwrites
 
+	patches.fixes/crypto-prefix-module-autoloading-with-crypto
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
