crypto: include crypto- module prefix in template (bsc#914423).

--- a/series.conf
+++ b/series.conf
@@ -17346,6 +17346,7 @@
 	patches.fixes/random-03-account-for-entropy-loss-due-to-overwrites
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
+	patches.fixes/crypto-include-crypto-module-prefix-in-template
 
 	########################################################
 	# Other drivers we have added to the tree
