crypto: add missing crypto module aliases (bsc#914423).

--- a/series.conf
+++ b/series.conf
@@ -17347,6 +17347,7 @@
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
+	patches.fixes/crypto-add-missing-crypto-module-aliases
 
 	########################################################
 	# Other drivers we have added to the tree
