mm/vmalloc.c: unbreak __vunmap() (bsc#916365).

--- a/series.conf
+++ b/series.conf
@@ -17838,6 +17838,7 @@
 	patches.suse/vmcore-PT_LOAD-memory-chunks-page-aligned
 	patches.suse/vmalloc-make-find_vm_area-check-in-range
 	patches.suse/vmalloc-introduce-remap_vmalloc_range_partial
+	patches.suse/mm-vmalloc.c-unbreak-__vunmap
 	patches.suse/vmcore-allocate-ELF-note-segment-in-kdump-kernel
 	patches.suse/vmcore-allow-userspace-remap-ELF-note-segment-buffer
 	patches.suse/vmcore-unify-vmcore-file-size-calculation
