rbd: fix I/O error propagation for reads (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4788,6 +4788,7 @@
 	patches.ceph/0015-rbd-take-a-little-credit
 	patches.ceph/0016-rbd-fix-a-couple-warnings
 	patches.ceph/0017-block-rbd-use-null-instead-of-0
+	patches.ceph/0019-rbd-fix-i-o-error-propagation-for-reads
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
