--- a/series.conf
+++ b/series.conf
@@ -4781,6 +4781,7 @@
 	patches.ceph/0008-rbd-flush-dcache-after-zeroing-page-data
 	patches.ceph/0009-rbd-clean-up-a-few-things-in-the-refresh-path
 	patches.ceph/0010-rbd-protect-against-duplicate-client-creation
+	patches.ceph/0011-rbd-set-removing-flag-while-holding-list-lock
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
