rbd: use the correct length for format 2 object names (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4773,6 +4773,7 @@
 	# FATE#318328 bsc#917884
 	patches.ceph/0001-rbd-don-t-destroy-ceph_opts-in-rbd_add
 	patches.ceph/0002-rbd-fix-cleanup-in-rbd_add
+	patches.ceph/0003-rbd-use-the-correct-length-for-format-2-object-names
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
