--- a/series.conf
+++ b/series.conf
@@ -4785,6 +4785,7 @@
 	patches.ceph/0012-rbd-protect-against-concurrent-unmaps
 	patches.ceph/0013-rbd-don-t-hold-ctl_mutex-to-get-put-device
 	patches.ceph/0014-rbd-use-rwsem-to-protect-header-updates
+	patches.ceph/0015-rbd-take-a-little-credit
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
