rbd: send snapshot context with writes (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4775,6 +4775,7 @@
 	patches.ceph/0002-rbd-fix-cleanup-in-rbd_add
 	patches.ceph/0003-rbd-use-the-correct-length-for-format-2-object-names
 	patches.ceph/0004-rbd-fetch-object-order-before-using-it
+	patches.ceph/0005-rbd-send-snapshot-context-with-writes
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
