libceph: add function to ensure notifies are complete (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4791,6 +4791,7 @@
 	patches.ceph/0019-rbd-fix-i-o-error-propagation-for-reads
 	patches.ceph/0020-rbd-fix-buffer-size-for-writes-to-images-with-snapshots
 	patches.ceph/0021-rbd-fix-null-dereference-in-dout
+	patches.ceph/libceph-add-function-to-ensure-notifies-are-complete
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
