rbd: fetch object order before using it (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4774,6 +4774,7 @@
 	patches.ceph/0001-rbd-don-t-destroy-ceph_opts-in-rbd_add
 	patches.ceph/0002-rbd-fix-cleanup-in-rbd_add
 	patches.ceph/0003-rbd-use-the-correct-length-for-format-2-object-names
+	patches.ceph/0004-rbd-fetch-object-order-before-using-it
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
