--- a/series.conf
+++ b/series.conf
@@ -4790,6 +4790,7 @@
 	patches.ceph/0017-block-rbd-use-null-instead-of-0
 	patches.ceph/0019-rbd-fix-i-o-error-propagation-for-reads
 	patches.ceph/0020-rbd-fix-buffer-size-for-writes-to-images-with-snapshots
+	patches.ceph/0021-rbd-fix-null-dereference-in-dout
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
