rbd: protect against concurrent unmaps (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4782,6 +4782,7 @@
 	patches.ceph/0009-rbd-clean-up-a-few-things-in-the-refresh-path
 	patches.ceph/0010-rbd-protect-against-duplicate-client-creation
 	patches.ceph/0011-rbd-set-removing-flag-while-holding-list-lock
+	patches.ceph/0012-rbd-protect-against-concurrent-unmaps
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
