rbd: drop an unsafe assertion (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4802,6 +4802,7 @@
 	patches.ceph/rbd-fix-error-paths-in-rbd_img_request_fill
 	patches.ceph/rbd-use-reference-counts-for-image-requests
 	patches.ceph/rbd-fix-error-recovery-in-rbd_obj_read_sync
+	patches.ceph/rbd-drop-an-unsafe-assertion
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
