rbd: drop original request earlier for existence check (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4777,6 +4777,7 @@
 	patches.ceph/0004-rbd-fetch-object-order-before-using-it
 	patches.ceph/0005-rbd-send-snapshot-context-with-writes
 	patches.ceph/0006-rbd-use-min_t-to-fix-comparison-of-distinct-pointer-types-warning
+	patches.ceph/0007-rbd-drop-original-request-earlier-for-existence-check
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
