--- a/series.conf
+++ b/series.conf
@@ -4779,6 +4779,7 @@
 	patches.ceph/0006-rbd-use-min_t-to-fix-comparison-of-distinct-pointer-types-warning
 	patches.ceph/0007-rbd-drop-original-request-earlier-for-existence-check
 	patches.ceph/0008-rbd-flush-dcache-after-zeroing-page-data
+	patches.ceph/0009-rbd-clean-up-a-few-things-in-the-refresh-path
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
