rbd: fix a couple warnings (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4786,6 +4786,7 @@
 	patches.ceph/0013-rbd-don-t-hold-ctl_mutex-to-get-put-device
 	patches.ceph/0014-rbd-use-rwsem-to-protect-header-updates
 	patches.ceph/0015-rbd-take-a-little-credit
+	patches.ceph/0016-rbd-fix-a-couple-warnings
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
