rbd: ignore unmapped snapshots that no longer exist (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4796,6 +4796,7 @@
 	patches.ceph/0022-rbd-complete-notifies-before-cleaning-up-osd_client-and-rbd_dev
 	patches.ceph/0023-rbd-make-rbd_obj_notify_ack-synchronous
 	patches.ceph/0024-rbd-fix-use-after-free-of-rbd_dev-disk
+	patches.ceph/0025-rbd-ignore-unmapped-snapshots-that-no-longer-exist
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
