rbd: protect against duplicate client creation (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4780,6 +4780,7 @@
 	patches.ceph/0007-rbd-drop-original-request-earlier-for-existence-check
 	patches.ceph/0008-rbd-flush-dcache-after-zeroing-page-data
 	patches.ceph/0009-rbd-clean-up-a-few-things-in-the-refresh-path
+	patches.ceph/0010-rbd-protect-against-duplicate-client-creation
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
