--- a/series.conf
+++ b/series.conf
@@ -4797,6 +4797,7 @@
 	patches.ceph/0023-rbd-make-rbd_obj_notify_ack-synchronous
 	patches.ceph/0024-rbd-fix-use-after-free-of-rbd_dev-disk
 	patches.ceph/0025-rbd-ignore-unmapped-snapshots-that-no-longer-exist
+	patches.ceph/0026-rbd-fix-error-handling-from-rbd_snap_name
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
