rbd: Fix error recovery in rbd_obj_read_sync() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4801,6 +4801,7 @@
 	patches.ceph/0027-block-replace-strict_strtoul-with-kstrtoul
 	patches.ceph/rbd-fix-error-paths-in-rbd_img_request_fill
 	patches.ceph/rbd-use-reference-counts-for-image-requests
+	patches.ceph/rbd-fix-error-recovery-in-rbd_obj_read_sync
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
