rbd: don't hold ctl_mutex to get/put device (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4783,6 +4783,7 @@
 	patches.ceph/0010-rbd-protect-against-duplicate-client-creation
 	patches.ceph/0011-rbd-set-removing-flag-while-holding-list-lock
 	patches.ceph/0012-rbd-protect-against-concurrent-unmaps
+	patches.ceph/0013-rbd-don-t-hold-ctl_mutex-to-get-put-device
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
