rbd: make rbd_obj_notify_ack() synchronous (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4794,6 +4794,7 @@
 	patches.ceph/libceph-add-function-to-ensure-notifies-are-complete
 	patches.ceph/ceph-remove-bogus-extern
 	patches.ceph/0022-rbd-complete-notifies-before-cleaning-up-osd_client-and-rbd_dev
+	patches.ceph/0023-rbd-make-rbd_obj_notify_ack-synchronous
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
