--- a/series.conf
+++ b/series.conf
@@ -4799,6 +4799,7 @@
 	patches.ceph/0025-rbd-ignore-unmapped-snapshots-that-no-longer-exist
 	patches.ceph/0026-rbd-fix-error-handling-from-rbd_snap_name
 	patches.ceph/0027-block-replace-strict_strtoul-with-kstrtoul
+	patches.ceph/rbd-fix-error-paths-in-rbd_img_request_fill
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
