block: rbd: use NULL instead of 0 (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4787,6 +4787,7 @@
 	patches.ceph/0014-rbd-use-rwsem-to-protect-header-updates
 	patches.ceph/0015-rbd-take-a-little-credit
 	patches.ceph/0016-rbd-fix-a-couple-warnings
+	patches.ceph/0017-block-rbd-use-null-instead-of-0
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
