ceph: remove bogus extern (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4792,6 +4792,7 @@
 	patches.ceph/0020-rbd-fix-buffer-size-for-writes-to-images-with-snapshots
 	patches.ceph/0021-rbd-fix-null-dereference-in-dout
 	patches.ceph/libceph-add-function-to-ensure-notifies-are-complete
+	patches.ceph/ceph-remove-bogus-extern
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
