rbd: don't destroy ceph_opts in rbd_add() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4770,6 +4770,9 @@
 	patches.ceph/0938-fix-ceph_key_instantiate-to-build-correctly-without-.patch
 	patches.ceph/0939-remove-include-of-linux-export.h-which-isn-t-needed.patch
 
+	# FATE#318328 bsc#917884
+	patches.ceph/0001-rbd-don-t-destroy-ceph_opts-in-rbd_add
+
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
 	########################################################
