--- a/series.conf
+++ b/series.conf
@@ -4772,6 +4772,7 @@
 
 	# FATE#318328 bsc#917884
 	patches.ceph/0001-rbd-don-t-destroy-ceph_opts-in-rbd_add
+	patches.ceph/0002-rbd-fix-cleanup-in-rbd_add
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
